# qAPP

./: .gitignore  CMakeLists.txt  README.md  audio_stream.cpp  audio_stream.h  interfaces.cpp  interfaces.h  main.cpp  parser.cpp  parser.h  qAPP.pro  translations.h
